feat: renforcement de la sécurité